--- a/IDCA.Client/View/TableSettingWindow.xaml
+++ b/IDCA.Client/View/TableSettingWindow.xaml
@@ -1,14 +1,23 @@
-﻿<Window x:Class="IDCA.Client.View.TableSettingWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-        xmlns:viewmodel="clr-namespace:IDCA.Client.ViewModel" 
-        d:DataContext="{d:DesignInstance Type=viewmodel:TableSettingViewModel}"
-        mc:Ignorable="d"
-        Height="600" 
-        Width="1000"
-        Style="{StaticResource IDCA.Window.Normal}">
+﻿<mah:MetroWindow x:Class="IDCA.Client.View.TableSettingWindow"
+                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+                 xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
+                 xmlns:view="clr-namespace:IDCA.Client.View"
+                 xmlns:viewmodel="clr-namespace:IDCA.Client.ViewModel" 
+                 d:DataContext="{d:DesignInstance Type=viewmodel:TableSettingViewModel}"
+                 mc:Ignorable="d"
+                 Height="600" 
+                 Width="1300"
+                 ResizeMode="CanMinimize"
+                 Background="{StaticResource IDCA.Brushes.Window.Background}"
+                 >
+
+    <Window.DataContext>
+        <viewmodel:TableSettingViewModel/>
+    </Window.DataContext>
+
     <Grid>
 
         <Grid.RowDefinitions>
@@ -17,34 +26,47 @@
             <RowDefinition Height="30"/>
         </Grid.RowDefinitions>
 
-        <Grid Grid.Row="0"
-              Background="{StaticResource IDCA.Colors.Window.Background}">
+        <Grid Grid.Row="0">
         </Grid>
 
-        <Grid Grid.Row="2"
-              Background="{StaticResource IDCA.Colors.Window.Background}">
+        <Grid Grid.Row="2">
         </Grid>
 
         <Grid Grid.Row="1">
 
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="240"/>
+                <ColumnDefinition Width="100"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
             <Border Grid.Column="0"
-                    BorderBrush="{StaticResource IDCA.Colors.Window.BorderBrush}"
-                    Background="{StaticResource IDCA.Colors.Window.Background}"
+                    BorderBrush="{StaticResource IDCA.Brushes.Window.BorderBrush}"
+                    Background="{StaticResource IDCA.Brushes.Window.Background}"
                     BorderThickness="0 0 1 0">
-
-                <TreeView>
-                    
+                <TreeView BorderThickness="0"
+                          FontSize="15"
+                          FontFamily="{StaticResource IDCA.Font.Family}"
+                          Background="{Binding RelativeSource={RelativeSource AncestorType=Window, Mode=FindAncestor}, Path=Background}"
+                          >
+                    <TreeViewItem IsExpanded="True" 
+                                  Margin="0 20 0 0"
+                                  ItemsSource="{Binding Topbreaks}">
+                        <TreeViewItem.Header>
+                            <TextBlock>表头</TextBlock>
+                        </TreeViewItem.Header>
+                    </TreeViewItem>
+                    <TreeViewItem IsExpanded="True"
+                                  Margin="0 20 0 0"
+                                  ItemsSource="{Binding TableNames}">
+                        <TreeViewItem.Header>
+                            <TextBlock>表侧</TextBlock>
+                        </TreeViewItem.Header>
+                    </TreeViewItem>
                 </TreeView>
-                
             </Border>
-            
+
+            <view:TableSettingView Grid.Column="1"/>
+
         </Grid>
-        
-        
     </Grid>
-</Window>
+</mah:MetroWindow>
